# dgce-engine

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CODEX.md  DGCE_Context_Assembly_Spec_v0.1.md  DGCE_INGESTION_CONTRACT (2).md  Dockerfile  RUNBOOK.md  dce.py  dgce.py  pyproject.toml
.claude/: settings.json  settings.local.json
aether/: __init__.py
aether.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
aether_core/: __init__.py  config.py  enums.py
data/: api_telemetry.jsonl
defiant-sky/: run_dgce.py
docs/: dgce_controlled_write_contract.md  dgce_operator_quickstart_and_path_glossary.md  dgce_sdk_lifecycle_scope.md  dgce_stage0_to_stage9_lifecycle_contract.md  dgce_workspace_artifacts.md  game_adapter_stage2_preview.md  game_adapter_stage3_review_bundle.md  gce_stage0_ingestion.md  light_unreal_symbol_resolver.md  phase4_software_adapter_operational_runbook.md  phase4_software_adapter_production_stability_declaration.md  phase4_software_adapter_stability_audit.md  phase4_software_adapter_stability_reaudit.md  stage7_alignment.md
policies/: code_routine.yaml  global.yaml  planning.yaml
registries/: presets.yaml  task_buckets.yaml
tests/: __init__.py  test_anomaly_detection.py  test_api.py  test_api_operational.py  test_classification_service.py  test_classifier_rules.py  test_dce_status.py  test_dgce_approve_api.py  test_dgce_end_to_end_smoke.py  test_dgce_execute_api.py  test_dgce_incremental.py  test_dgce_inspector.py  test_dgce_loop.py  test_dgce_prepare_api.py  test_dgce_read_api.py  test_dgce_read_api_http.py  test_dgce_refresh_api.py  (+38 more)
(+198 files in other folders)
